<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.fragments.RegisterAddtionalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">
        <TextView
            style="@style/labelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/select_picture" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgProfilePicture"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:riv_corner_radius="@dimen/margin_end"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_add_image"
            android:contentDescription="@string/select_picture" />
        <TextView
            style="@style/labelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_as" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:checkedButton="@id/btnFarmer">  <!-- Set default selected button here -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFarmer"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/farmer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTrader"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/trader" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


        <TextView
            style="@style/labelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/city" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUserCityLayout"
            style="@style/autoCompleteTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_home">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/etUserCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/crops"
                android:hint="@string/resident_city"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/etNeighborhoodLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                style="@style/labelMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/neighborhood" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/autoCompleteTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_home">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/etNeighborhood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:entries="@array/crops"
                    android:hint="@string/resident_city"
                    android:inputType="none"
                    app:simpleItems="@array/jordan_cities" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



    </LinearLayout>

</ScrollView>